ajout POC client/serveur IPC JS2JS

--- a/gui/node_webkit/pages/on-demand_scan.html
+++ b/gui/node_webkit/pages/on-demand_scan.html
@@ -19,7 +19,7 @@
 		</p>
 		
 
-	<script language ="javascript" src="../js/AVscan.js" > </script>
+	<script language ="javascript" src="../js/AV_scan.js" > </script>
 		
   </body>
 </html>
