--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -11,6 +11,7 @@
 	<!-- We include all JS files to be used -->
 	<script language ="javascript" src="js/systray.js" > </script>
     <script language ="javascript" src="js/systray_onclick.js"> </script>
+	<script language ="javascript" src="js/AV_ipc.js" > </script>
 
 	
         <p align="center">
@@ -18,5 +19,14 @@
 			   <br><br>
 			<button onclick="closeSystray()">Remove Systray</button>
 		</p>
+		
+		<p align="center">
+			<button onclick="start_world_server_ipc()">Start world server</button> 
+			   <br><br>
+			<button onclick="hello_world_ipc()">Send hello to World</button>
+		</p>
+		
+		
+		
   </body>
 </html>
