utilisation des sockets TCP, réorganisation du code

--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -10,9 +10,9 @@
 
 	<!-- We include all JS files to be used -->
 	<script language ="javascript" src="js/systray.js" > </script>
-    <script language ="javascript" src="js/systray_onclick.js"> </script>
+    <script language ="javascript" src="js/systray_actions.js"> </script>
 	<script language ="javascript" src="js/AV_ipc.js" > </script>
-
+	<script language ="javascript" src="js/AV_ipc_actions.js" > </script>
 	
         <p align="center">
 			<button onclick="initSystray()">Init Systray</button> 
