Ajout deux paramètres d'exemple pour l'analyse AV

--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -11,6 +11,7 @@
 	<!-- We include all JS files to be used -->
 	<script language ="javascript" src="js/systray.js" > </script>
     <script language ="javascript" src="js/systray_actions.js"> </script>
+    <script language ="javascript" src="js/AV_ipc_protocol.js" > </script>
 	<script language ="javascript" src="js/AV_ipc_actions.js" > </script>
 	<script language ="javascript" src="js/AV_ipc.js" > </script>
 
