Ajout README.md file for nw.js project

--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
   
+    <p align="center">
+     <img id="uhuru_grey_logo" src="./img/uhuru_grey.svg" type="image/svg+xml" > </img>
+    </p>
+	
+  
 	<h3 align="center" > Uhuru-AV NW.JS POC</h2>
 
 	<!-- We include all JS files to be used -->
