--- a/gui/node_webkit/pages/on-demand_scan_results.html
+++ b/gui/node_webkit/pages/on-demand_scan_results.html
@@ -14,17 +14,26 @@
     </p>
 	
 	<h3 align="center" > On-demand scan results</h2>
-
 		
-		<p align=center > <b>Scan progress :</b> 
-		   <progress id="scan_progress" value="50" max="100"></progress>
-		   <span id="pourcentage"></span>
-		   <input type="button" onclick="modif(-10);" value="-">
-		   <input type="button" onclick="modif(10);" value="+">
-		</p>
-	
-		<p align="center">
-			<table align="center" id="scan_results_table" border="1" width="75%">
+		<table align="center" >
+			 <tr align="center">
+					<td align="center"> <img id="uhuru_grey_logo" src="../img/magnifying glass119.png"> </img> &nbsp; &nbsp; </td>
+					<td align="center"> C:\Document and Settings\Current\Scanned\File.exe </td>
+			 </tr>	 
+			 <tr align="center" >
+					<td colspan="2">  <progress id="scan_progress" value="50" max="100"></progress> <span id="pourcentage">50%</span> </td>
+			 </tr>
+			 <tr align="center" >
+					<td colspan="2"> <b>Scan duration :</b> 7:00:15 </td>
+			 </tr>
+			 <tr align="center" colspan="2">
+			 		<td colspan="2"> <b>Number of scanned files :</b> 7587 </td>
+			 </tr>
+		</table>
+	   
+		<div id="div_table_results">
+		   <p align="center"> 
+			<table align="center" id="scan_table_results" width="70%" border="1" height="100px" >
 			  <tr>
 			      <th> Threat </th>
 				  <th> Status </th>
@@ -48,11 +57,16 @@
 				  <td> Infected </td>
 				  <td> C:/C/C/A/D/Offuscated.apk</td>
 			  </tr>
-			  
+			  <tr>
+			      <td> Backdoor.NSA78</td>
+				  <td> Infected </td>
+				  <td> C:/C/C/A/D/Offuscated.apk7</td>
+			  </tr>
 			</table>
-		</p>
+			</p>
+		</div>
 
-	
+	<div id="credits" align="center" >Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
 		
   </body>
 </html>
