Remplacement de l'utilisation de node-ipc par l'utilisation du module core node.js net.

--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -27,9 +27,9 @@
 		</p>
 		
 		<p align="center">
-			<button onclick="start_world_server_ipc()">Start world server</button> 
+			<button onclick="start_tcp_server()">Start TCP server</button> 
 			   <br><br>
-			<button onclick="hello_world_ipc()">Send hello to World</button>
+			<button onclick="stop_tcp_server()">Stop TCP server</button>
 		</p>
 		
 		
