Add Named Pipes IPC client

--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -18,6 +18,7 @@
     <script language ="javascript" src="js/systray_actions.js"> </script>
     <script language ="javascript" src="js/AV_ipc_protocol.js" > </script>
 	<script language ="javascript" src="js/AV_ipc_actions.js" > </script>
+	<script language ="javascript" src="js/AV_ipc_client.js" > </script>
 	<script language ="javascript" src="js/AV_ipc.js" > </script>
 
         <p align="center">
@@ -27,9 +28,9 @@
 		</p>
 		
 		<p align="center">
-			<button onclick="start_tcp_server()">Start TCP server</button> 
+			<button onclick="connect_to_AV()">Connect to AV</button> 
 			   <br><br>
-			<button onclick="stop_tcp_server()">Stop TCP server</button>
+			<button onclick="write_to_AV()">Write to AV</button>
 		</p>
 		
 		
