Petite réorganisation du code pour l'ipc en nw.js

--- a/gui/node_webkit/index.html
+++ b/gui/node_webkit/index.html
@@ -10,7 +10,6 @@
      <img id="uhuru_grey_logo" src="./img/uhuru_grey.svg" type="image/svg+xml" > </img>
     </p>
 	
-  
 	<h3 align="center" > Uhuru-AV NW.JS POC</h2>
 
 	<!-- We include all JS files to be used -->
@@ -19,7 +18,6 @@
     <script language ="javascript" src="js/AV_ipc_protocol.js" > </script>
 	<script language ="javascript" src="js/AV_ipc_actions.js" > </script>
 	<script language ="javascript" src="js/AV_ipc_client.js" > </script>
-	<script language ="javascript" src="js/AV_ipc.js" > </script>
 
         <p align="center">
 			<button onclick="initSystray()">Init Systray</button> 
@@ -30,7 +28,7 @@
 		<p align="center">
 			<button onclick="connect_to_AV()">Connect to AV</button> 
 			   <br><br>
-			<button onclick="write_to_AV()">Write to AV</button>
+			<button onclick="TestWrite()">Test Write</button>
 		</p>
 		
 		
