Réorganisation des pages et des scripts pour cas d'utilisation réel

--- a/gui/node_webkit/pages/on-demand_scan.html
+++ b/gui/node_webkit/pages/on-demand_scan.html
@@ -11,7 +11,7 @@
     </p>
 	
 	<h3 align="center" > On-demand scan</h2>
-
+	
 		<p align="center">
 		    <form id="myForm" align="center" >
 				<input type="file" id="fileDialog" nwdirectory />
@@ -53,9 +53,10 @@
 		<p align="center">
 		  <button onclick="new_ondemand_scan()">Start scan now!</button> 
 		</p>
-		
-
-	<script language ="javascript" src="../js/AV_scan.js" > </script>
-		
+			
+		<script language ="javascript" src="../js/AV_scan.js" > </script>
+		<script language ="javascript" src="../js/AV_ipc_client.js" > </script>
+		<script language ="javascript" src="../js/AV_ipc_protocol.js" > </script>
+	
   </body>
 </html>
