--- a/gui/node_webkit/pages/on-demand_scan_results.html
+++ b/gui/node_webkit/pages/on-demand_scan_results.html
@@ -6,9 +6,6 @@
   </head>
   <body>
   
-  <script language ="javascript" src="../js/AV_scan.js" > </script>
-  <script language ="javascript" src="../js/AV_scan_results.js" > </script>
-  
     <p align="center">
      <img id="uhuru_grey_logo" src="../img/helmet_loupe.jpg"> </img>
     </p>
@@ -67,6 +64,11 @@
 		</div>
 
 	<div id="credits" align="center" >Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+		
+	  <!-- The AV scan really starts by including these scripts -->
+	  <script language ="javascript" src="../js/AV_ipc_client.js" > </script>
+	  <script language ="javascript" src="../js/AV_ipc_protocol.js" > </script>
+	  <script language ="javascript" src="../js/AV_scan_results.js" > </script>
 		
   </body>
 </html>
