Première réorganisation des scripts et pages html, ajout d'un serveur IPC named pipe, + autres

--- a/gui/node_webkit/pages/AV_scan_window.html
+++ b/gui/node_webkit/pages/AV_scan_window.html
@@ -54,9 +54,9 @@
 		  <button onclick="new_ondemand_scan()">Start scan now!</button> 
 		</p>
 			
-		<script language ="javascript" src="../js/AV_scan.js" > </script>
-		<script language ="javascript" src="../js/AV_ipc_client.js" > </script>
-		<script language ="javascript" src="../js/AV_ipc_protocol.js" > </script>
+		<!-- These scripts must be included after some HTML objects are defined -->
+	    <script language ="javascript" src="../js/JSON_utils.js" > </script>
+		<script language ="javascript" src="../js/AV_scan_window.js" > </script>
 	
   </body>
 </html>
