--- a/gui/node_webkit/pages/AV_scan_results_window.html
+++ b/gui/node_webkit/pages/AV_scan_results_window.html
@@ -15,16 +15,16 @@
 		<table align="center" >
 			 <tr align="center">
 					<td align="center"> <img id="uhuru_grey_logo" src="../img/magnifying glass119.png"> </img> &nbsp; &nbsp; </td>
-					<td align="center"> C:\Document and Settings\Current\Scanned\File.exe </td>
+					<td align="center"> C:\ </td>
 			 </tr>	 
 			 <tr align="center" >
-					<td colspan="2">  <progress id="scan_progress" value="50" max="100"></progress> <span id="pourcentage">50%</span> </td>
+					<td colspan="2">  <progress id="scan_progress" value="0" max="100"></progress> <span id="pourcentage">0%</span> </td>
 			 </tr>
 			 <tr align="center" >
-					<td colspan="2"> <b>Scan duration :</b> 7:00:15 </td>
+					<td colspan="2"> <b>Scan duration :</b> 00:00:00 </td>
 			 </tr>
 			 <tr align="center" colspan="2">
-			 		<td colspan="2"> <b>Number of scanned files :</b> 7587 </td>
+			 		<td colspan="2"> <b>Number of scanned files :</b> 0 </td>
 			 </tr>
 		</table>
 	   
@@ -42,23 +42,6 @@
 				  <td> Infected </td>
 				  <td> C:/Oh/My/God.pdf</td>   
 			  </tr>
-			  
-			  <tr>
-			      <td> Virus5874.X86</td>
-				  <td> Infected </td>
-				  <td> C:/Win32/1452879999.exe</td>
-			  </tr>
-
-			  <tr>
-			      <td> Backdoor.NSA77</td>
-				  <td> Infected </td>
-				  <td> C:/C/C/A/D/Offuscated.apk</td>
-			  </tr>
-			  <tr>
-			      <td> Backdoor.NSA78</td>
-				  <td> Infected </td>
-				  <td> C:/C/C/A/D/Offuscated.apk7</td>
-			  </tr>
 			</table>
 			</p>
 		</div>
@@ -66,9 +49,12 @@
 	<div id="credits" align="center" >Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
 		
 	  <!-- The AV scan really starts by including these scripts -->
+	  <!-- These scripts must be included after some HTML objects are defined -->
+	  <script language ="javascript" src="../js/JSON_utils.js" > </script>
 	  <script language ="javascript" src="../js/AV_ipc_client.js" > </script>
+	  <script language ="javascript" src="../js/AV_ipc_server.js" > </script>
 	  <script language ="javascript" src="../js/AV_ipc_protocol.js" > </script>
-	  <script language ="javascript" src="../js/AV_scan_results.js" > </script>
+	  <script language ="javascript" src="../js/AV_scan_results_window.js" > </script>
 		
   </body>
 </html>
