Envoi correctement la première requête de demande de scan avec numéro correspondant au named pipe

--- a/gui/node_webkit/pages/AV_scan_results_window.html
+++ b/gui/node_webkit/pages/AV_scan_results_window.html
@@ -51,6 +51,7 @@
 	  <!-- The AV scan really starts by including these scripts -->
 	  <!-- These scripts must be included after some HTML objects are defined -->
 	  <script language ="javascript" src="../js/JSON_utils.js" > </script>
+	  <script language ="javascript" src="../js/STRING_utils.js" > </script>
 	  <script language ="javascript" src="../js/AV_ipc_client.js" > </script>
 	  <script language ="javascript" src="../js/AV_ipc_server.js" > </script>
 	  <script language ="javascript" src="../js/AV_ipc_protocol.js" > </script>
