--- a/gui/node_webkit/pages/AV_scan_window.html
+++ b/gui/node_webkit/pages/AV_scan_window.html
@@ -56,6 +56,7 @@
 			
 		<!-- These scripts must be included after some HTML objects are defined -->
 	    <script language ="javascript" src="../js/JSON_utils.js" > </script>
+		<script language ="javascript" src="../js/STRING_utils.js" > </script>
 		<script language ="javascript" src="../js/AV_scan_window.js" > </script>
 	
   </body>
