--- a/gui/node_webkit/pages/AV_scan_window.html
+++ b/gui/node_webkit/pages/AV_scan_window.html
@@ -6,9 +6,9 @@
   </head>
   <body>
   
-    <p align="center">
-     <img id="uhuru_grey_logo" src="../img/helmet_loupe.jpg"> </img>
-    </p>
+    <!-- <p align="center">
+      <img id="uhuru_grey_logo" src="../img/helmet_loupe.jpg"> </img>
+    </p> -->
 	
 	<h3 align="center" > On-demand scan</h2>
 	
