--- a/gui/node_webkit/pages/AV_scan_results_window.html
+++ b/gui/node_webkit/pages/AV_scan_results_window.html
@@ -16,7 +16,7 @@
 		<table align="center" >
 			 <tr align="center">
 					<td align="center"> <img id="uhuru_grey_logo" src="../img/magnifying glass119.png"> </img> &nbsp; &nbsp; </td>
-					<td align="center"> C:\ </td>
+					<td id="scan_file_path" align="center"> C:\ </td>
 			 </tr>	 
 			 <tr align="center" >
 					<td colspan="2">  <progress id="scan_progress" value="0" max="100"></progress> <span id="pourcentage">0%</span> </td>
