--- a/gui/node_webkit/pages/AV_scan_results_window.html
+++ b/gui/node_webkit/pages/AV_scan_results_window.html
@@ -29,6 +29,10 @@
 			 </tr>
 		</table>
 	   
+	   	<p align="center">
+			<button onclick="cancel_scan()">Cancel</button> 
+		</p>
+	   
 		<div id="div_table_results">
 		   <p align="center"> 
 			<table align="center" id="scan_table_results" width="70%" border="1" height="100px" >
@@ -46,7 +50,7 @@
 			</table>
 			</p>
 		</div>
-
+		
 	<div id="credits" align="center" >Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
 		
 	  <!-- The AV scan really starts by including these scripts -->
