Finalisation du protocole d'annulation

--- a/gui/node_webkit/pages/AV_scan_results_window.html
+++ b/gui/node_webkit/pages/AV_scan_results_window.html
@@ -30,7 +30,7 @@
 		</table>
 	   
 	   	<p align="center">
-			<button onclick="cancel_scan()">Cancel</button> 
+			<button onclick="ask_to_cancel_scan()">Cancel</button> 
 		</p>
 	   
 		<div id="div_table_results">
