update documentation of tests

--- a/documentation/linux_tests_list.html
+++ b/documentation/linux_tests_list.html
@@ -800,7 +800,7 @@ cellspacing="0" cellpadding="4">
 <col width="33%" />
 <thead>
 <tr>
-<th align="left" valign="top"> Test                           </th>
+<th align="left" valign="top"> Test                                </th>
 <th align="left" valign="top"> Status </th>
 <th align="left" valign="top"> Details</th>
 </tr>
@@ -823,6 +823,11 @@ cellspacing="0" cellpadding="4">
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">Android Nexus 4 - MTP Protocol</p></td>
+<td align="left" valign="top"><p class="table">Not OK</p></td>
+<td align="left" valign="top"><p class="table">Unable to scan mounted gvfsd-fuse on /run/user/1000/gvfs type fuse.gvfsd-fuse (rw,nosuid,nodev,user=uhuru)</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Uhuru Mobile Nexus 5 - MTP Protocol</p></td>
 <td align="left" valign="top"><p class="table">Not OK</p></td>
 <td align="left" valign="top"><p class="table">Unable to scan mounted gvfsd-fuse on /run/user/1000/gvfs type fuse.gvfsd-fuse (rw,nosuid,nodev,user=uhuru)</p></td>
 </tr>
@@ -880,7 +885,7 @@ cellspacing="0" cellpadding="4">
 <div id="footer">
 <div id="footer-text">
 Version 1.0<br />
-Last updated 2015-11-19 12:19:14 CET
+Last updated 2015-11-19 12:24:38 CET
 </div>
 </div>
 </body>
