use realpath for directory black list filter

--- a/documentation/linux_tests_list.html
+++ b/documentation/linux_tests_list.html
@@ -762,7 +762,7 @@ cellspacing="0" cellpadding="4">
 <tr>
 <th align="left" valign="top"> Test                                       </th>
 <th align="left" valign="top"> Status </th>
-<th align="left" valign="top"> Details</th>
+<th align="left" valign="top"> Notes</th>
 </tr>
 </thead>
 <tbody>
@@ -802,7 +802,7 @@ cellspacing="0" cellpadding="4">
 <tr>
 <th align="left" valign="top"> Test                                </th>
 <th align="left" valign="top"> Status </th>
-<th align="left" valign="top"> Details</th>
+<th align="left" valign="top"> Notes</th>
 </tr>
 </thead>
 <tbody>
@@ -850,7 +850,7 @@ cellspacing="0" cellpadding="4">
 <tr>
 <th align="left" valign="top"> Test                                       </th>
 <th align="left" valign="top"> Status </th>
-<th align="left" valign="top"> Details</th>
+<th align="left" valign="top"> Notes</th>
 </tr>
 </thead>
 <tbody>
@@ -885,7 +885,7 @@ cellspacing="0" cellpadding="4">
 <div id="footer">
 <div id="footer-text">
 Version 1.0<br />
-Last updated 2015-11-19 12:24:38 CET
+Last updated 2015-11-19 12:27:20 CET
 </div>
 </div>
 </body>
