--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -47,6 +48,8 @@
     <script src="../bower_components/momentjs/moment.js"></script>
     <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
     <script src="../bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="../bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="../bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
