Armadito-UI :: get and refresh av + modules information + scan view modif.

--- a/app/index.html
+++ b/app/index.html
@@ -56,10 +56,13 @@
         <script src="scripts/app.js"></script>
         
         <script src="scripts/controllers/MainController.js"></script>
+		<script src="scripts/controllers/InformationController.js"></script>
         <script src="scripts/controllers/ScanController.js"></script>
         <script src="scripts/controllers/JournalController.js"></script>
         <script src="scripts/controllers/RapportDetailsController.js"></script>
-
+		
+		<script src="scripts/services/antivirus-ipc.js"></script>
+		<script src="scripts/services/antivirus-svc.js"></script>
         <script src="scripts/services/antivirus-service.js"></script>
         <!-- endbuild -->
 </body>
