--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
+    <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -42,11 +42,9 @@
     <script src="../bower_components/angular-touch/angular-touch.js"></script>
     <script src="../bower_components/bootswatch-dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="../bower_components/angular-smart-table/dist/smart-table.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/momentjs/moment.js"></script>
     <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
-    <script src="../bower_components/angular-timer/dist/angular-timer.js"></script>
     <script src="../bower_components/angular-timer/dist/angular-timer.js"></script>
     <script src="../bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <!-- endbower -->
@@ -60,6 +58,8 @@
         <script src="scripts/controllers/ScanController.js"></script>
         <script src="scripts/controllers/JournalController.js"></script>
         <script src="scripts/controllers/RapportDetailsController.js"></script>
+        <script src="scripts/controllers/customAnalyseController.js"></script>
+        <script src="scripts/controllers/DetailRapportModalController.js"></script>
 		
 		<script src="scripts/services/antivirus-ipc.js"></script>
 		<script src="scripts/services/antivirus-svc.js"></script>
