--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/controllers/customAnalyseController.js"></script>
         <script src="scripts/controllers/DetailRapportModalController.js"></script>
         <script src="scripts/controllers/ParametersController.js"></script>
+        <script src="scripts/controllers/ConfirmationController.js"></script>
 		
 		<script src="scripts/services/antivirus-ipc.js"></script>
 		<script src="scripts/services/antivirus-svc.js"></script>
