--- a/documentation/linux_tests_list.html
+++ b/documentation/linux_tests_list.html
@@ -748,7 +748,7 @@ asciidoc.install();
 <h2 id="_on_access_scan_tests">On-access scan tests</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_séparé">Ubuntu 14.04 LTS 64Bit (trusty) / et /home séparé</h3>
+<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_séparé_avec_agent_dm_v1_5_9">Ubuntu 14.04 LTS 64Bit (trusty) / et /home séparé ( Avec Agent DM v1.5.9 )</h3>
 <div class="tableblock">
 <table rules="all"
 width="60%"
@@ -861,7 +861,7 @@ cellspacing="0" cellpadding="4">
 </div>
 </div>
 <div class="sect2">
-<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_non_séparé_pc_chiffré">Ubuntu 14.04 LTS 64Bit (trusty) / et /home non séparé + PC Chiffré</h3>
+<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_non_séparé_pc_chiffré_sans_agent_dm">Ubuntu 14.04 LTS 64Bit (trusty) / et /home non séparé + PC Chiffré ( Sans Agent DM )</h3>
 <div class="tableblock">
 <table rules="all"
 width="60%"
@@ -881,12 +881,12 @@ cellspacing="0" cellpadding="4">
 <tbody>
 <tr>
 <td align="left" valign="top"><p class="table">Add dir mark on new  USB Key</p></td>
-<td align="left" valign="top"><p class="table">TODO</p></td>
-<td align="left" valign="top"><p class="table"></p></td>
+<td align="left" valign="top"><p class="table">Not OK</p></td>
+<td align="left" valign="top"><p class="table">Certains malwares sont passés entre les mailles du filet à cause d&#8217;erreurs du type "bad file descriptor"</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table">Add dir mark on existing USB Key</p></td>
-<td align="left" valign="top"><p class="table">TODO</p></td>
+<td align="left" valign="top"><p class="table">Not OK</p></td>
 <td align="left" valign="top"><p class="table"></p></td>
 </tr>
 </tbody>
@@ -898,6 +898,109 @@ width="60%"
 frame="border"
 cellspacing="0" cellpadding="4">
 <caption class="title">Table 4. configured directories tests</caption>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+<thead>
+<tr>
+<th align="left" valign="top"> Test                                            </th>
+<th align="left" valign="top"> Status </th>
+<th align="left" valign="top"> Notes</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cp unmarked_dir to marked_dir (ELF_malwares*) (12) /tmp</p></td>
+<td align="left" valign="top"><p class="table">Not OK</p></td>
+<td align="left" valign="top"><p class="table">not scanned.</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cp marked_dir to marked_dir (ELF_malwares*) (12) /tmp</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cat /tmp/ELF_malwares* (12)</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cp marked_dir to market_dir (ELF_malwares*) (100) /tmp</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cp unmarked_dir to market_dir (ELF_malwares*) (100) /tmp</p></td>
+<td align="left" valign="top"><p class="table">Not OK</p></td>
+<td align="left" valign="top"><p class="table">not scanned.</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cp marked_dir to unmarket_dir (ELF_malwares*) (100) /tmp</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cat /tmp/ELF_no_malwares* (83)</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added recursively conf directory /tmp - cat /tmp/ELF_malwares* (100)</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Added subdirectory in already marked dir</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Rm subdirectory in already marked dir</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_non_séparé_pc_chiffré_avec_agent_dm_v1_5_9">Ubuntu 14.04 LTS 64Bit (trusty) / et /home non séparé + PC Chiffré ( Avec Agent DM v1.5.9 )</h3>
+<div class="tableblock">
+<table rules="all"
+width="60%"
+frame="border"
+cellspacing="0" cellpadding="4">
+<caption class="title">Table 5. /media tests</caption>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+<thead>
+<tr>
+<th align="left" valign="top"> Test                                            </th>
+<th align="left" valign="top"> Status </th>
+<th align="left" valign="top"> Notes</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left" valign="top"><p class="table">Add dir mark on new  USB Key</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Add dir mark on existing USB Key</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table"></p></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="tableblock">
+<table rules="all"
+width="60%"
+frame="border"
+cellspacing="0" cellpadding="4">
+<caption class="title">Table 6. configured directories tests</caption>
 <col width="33%" />
 <col width="33%" />
 <col width="33%" />
@@ -969,13 +1072,52 @@ cellspacing="0" cellpadding="4">
 <h2 id="_on_demand_scan_tests">On-demand scan tests</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_ubuntu_14_04_lts_64bit_trusty">Ubuntu 14.04 LTS 64Bit (trusty)</h3>
+<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_ensemble_pc_chiffré">Ubuntu 14.04 LTS 64Bit (trusty) / et /home ensemble + PC chiffré</h3>
+<div class="olist arabic"><ol class="arabic">
+<li>
+<p>
+on-access + on-demand
+</p>
+</li>
+</ol></div>
 <div class="tableblock">
 <table rules="all"
 width="60%"
 frame="border"
 cellspacing="0" cellpadding="4">
-<caption class="title">Table 5. Samba tests</caption>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+<thead>
+<tr>
+<th align="left" valign="top"> Test                                            </th>
+<th align="left" valign="top"> Status </th>
+<th align="left" valign="top"> Notes</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left" valign="top"><p class="table">Scan USB Key On-demand log-level=debug</p></td>
+<td align="left" valign="top"><p class="table">Not OK</p></td>
+<td align="left" valign="top"><p class="table">Freeze 5 sec, mais impossible à reproduire</p></td>
+</tr>
+<tr>
+<td align="left" valign="top"><p class="table">Scan USB Key On-demand log-level=warning</p></td>
+<td align="left" valign="top"><p class="table">OK</p></td>
+<td align="left" valign="top"><p class="table">No Freeze</p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_ubuntu_14_04_lts_64bit_trusty_et_home_séparé">Ubuntu 14.04 LTS 64Bit (trusty) / et /home séparé</h3>
+<div class="tableblock">
+<table rules="all"
+width="60%"
+frame="border"
+cellspacing="0" cellpadding="4">
+<caption class="title">Table 7. Samba tests</caption>
 <col width="33%" />
 <col width="33%" />
 <col width="33%" />
@@ -1015,7 +1157,7 @@ cellspacing="0" cellpadding="4">
 width="60%"
 frame="border"
 cellspacing="0" cellpadding="4">
-<caption class="title">Table 6. Mounted devices</caption>
+<caption class="title">Table 8. Mounted devices</caption>
 <col width="33%" />
 <col width="33%" />
 <col width="33%" />
@@ -1063,7 +1205,7 @@ cellspacing="0" cellpadding="4">
 width="60%"
 frame="border"
 cellspacing="0" cellpadding="4">
-<caption class="title">Table 7. Samba tests</caption>
+<caption class="title">Table 9. Samba tests</caption>
 <col width="33%" />
 <col width="33%" />
 <col width="33%" />
@@ -1106,7 +1248,7 @@ cellspacing="0" cellpadding="4">
 <div id="footer">
 <div id="footer-text">
 Version 1.1<br />
-Last updated 2016-01-11 14:02:49 CET
+Last updated 2016-04-14 14:14:07 CEST
 </div>
 </div>
 </body>
