Display last scanned object, table of scanning files now scroll to bottom

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <script src="../bower_components/angular-translate/angular-translate.js"></script>
     <script src="../bower_components/angular-translate-loader-url/angular-translate-loader-url.js"></script>
     <script src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="../bower_components/angular-truncate-2/dist/angular-truncate-2.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -67,8 +68,9 @@
         <script src="scripts/controllers/ParametersController.js"></script>
         <script src="scripts/controllers/ConfirmationController.js"></script>
 		
-	<script src="scripts/services/antivirus-ipc.js"></script>
-	<script src="scripts/services/antivirus-svc.js"></script>
+	   <script src="scripts/services/antivirus-ipc.js"></script>
+	   <script src="scripts/services/antivirus-svc.js"></script>
+       <script src="scripts/directives/schrollbottom.js"></script>
         <!-- endbuild -->
 </body>
 </html>
