--- a/tests/web/status.html
+++ b/tests/web/status.html
@@ -19,22 +19,22 @@
     </div>
 
     <div>
-      status: <span id="status">none</span>
+      antivirus version: <span id="antivirus_version">none</span>
     </div>
 
     <div>
-      updated on: <span id="update_timestamp">none</span>
+      status: <span id="global_status">none</span>
+    </div>
+
+    <div>
+      updated on: <span id="global_update_ts">none</span>
     </div>
 
     <div>
       <table id="modules" width="90%" border="1">
-	<tr> <th>name</th> <th>status</th> <th>updated on</th> <th>version</th> <th>#signature</th> <th>path</th></tr>
+	<tr> <th>name</th> <th>status</th> <th>updated on</th></tr>
       </table>
     </div>
-
-    <script>
-        register();
-    </script>
 
   </body>
 </html>
